# moca_uncertainty_lca

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  LICENSE.txt  README.md  REUSE.toml  bumpver.toml  checklist_applicationclass_1-markdown_v1.1.1.md  pyproject.toml  requirements.txt  setup.cfg  test_and_build_requirements.txt
.github/workflows/: static.yml
docs/source/: activity_browser.rst  api_reference.rst  conf.py  examples.rst  faq.rst  index.rst  installation.rst  tutorial.rst
files_from_LYFE/: create_ini_file_inputs_from_LYFE_LCA_results.py  database_reading_performance.py  lca_LH2_Tank_Replacement_monte_carlo.json  lca_local_sensitivity_analysis.py  lca_mmm_propagation.py  lca_monte_carlo.json  lca_monte_carlo.py  lca_monte_carlo_postprocessing.py  lca_monte_carlo_statistics.json  lca_monte_carlo_stefany.py  lyfe_lsa_postprocessing-thesis_2.ipynb  lyfe_lsa_postprocessing.ipynb  lyfe_mcs_postprocessing-thesis.ipynb  lyfe_monte_carlo_postprocessing copy.py  lyfe_monte_carlo_postprocessing.py  maintanance_debugging.py  plotting_propagation.py  postprocessing_stefany.py  sensitivity_analysis_json_to_csv.py  thesis_plotting.ipynb
src/: lca_monte_carlo.py
src/moca_uncertainty_lca/: __init__.py  run.py
src/uncertainty_lca/: __init__.py  monte_carlo.py  run.py  utils.py
src/uncertainty_lca.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: ci-dummy-test.py  create_test_project.py  set_up_test_environment.py  test.py  test_new.py  time_comparison_multi_impcat.py  time_comparison_singe_impcat.py  tryout.py
uncertainty_lca/: main.py
uncertainty_lca/config/: settings.py
uncertainty_lca/gui/: main_window.py
