# SPDX-FileCopyrightText: 2026 Maria Höller, German Aerospace Center (DLR)

# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moca_uncertainty_lca"
version = "0.1.2"
description = "MOCA - Uncertainty Quantification for Life Cycle Assessment"
requires-python = ">=3.10"
