# SPDX-FileCopyrightText: 2026 Maria Höller, German Aerospace Center (DLR)
#
# SPDX-License-Identifier: GPL-3.0-or-later

[metadata]
name = uncertainty_lca
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    brightway2
    numpy
    tqdm

[options.packages.find]
where = src
