# SPDX-FileCopyrightText: 2026 Maria Höller, German Aerospace Center (DLR)
#
# SPDX-License-Identifier: GPL-3.0-or-later

[metadata]
name = moca_uncertainty_lca
version = 1.0.2
author = Maria Höller
author_email = maria.hoeller@dlr.de
license = GPL-3.0-or-later
license_files = LICENSE.txt
url = https://github.com/DLR-MO/moca_uncertainty_lca/
description = MOCA - Uncertainty Quantification for Life Cycle Assessment

[options]
package_dir =
    = src
packages = find:
install_requires =
    brightway2
    numpy
    tqdm

[options.packages.find]
where = src
